Add horsey-frontend, horsey-backend, and horsey-contracts as submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "horsey-frontend"]
 	path = horsey-frontend
 	url = git@github.com:michaperki/horsey-frontend-app.git
+[submodule "horsey-contracts"]
+	path = horsey-contracts
+	url = git@github.com:michaperki/horsey-contracts.git
+[submodule "horsey-backend"]
+	path = horsey-backend
+	url = git@github.com:michaperki/horsey-backend.git
