--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
+  "scripts": {
+    "validate-summaries": "node scripts/validateSummaries.mjs"
+  },
   "dependencies": {
+    "chalk": "^5.4.1",
+    "fs-extra": "^11.2.0",
     "globals": "^15.14.0",
+    "inquirer": "^12.3.0",
+    "path": "^0.12.7",
     "react-scripts": "^5.0.1"
   }
 }
