--- a/package.json
+++ b/package.json
@@ -9,5 +9,14 @@
     "inquirer": "^12.3.0",
     "path": "^0.12.7",
     "react-scripts": "^5.0.1"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!(axios)/)"
+    ],
+    "moduleDirectories": ["node_modules", "src"]
   }
 }
